--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
+<!DOCTYPE html>
 <html>
+
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>UCL Blog</title>
+  <style>
+    body {
+      background: url('images/ucl.jpg') no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 
-<style>
-	
-body{
-        background: url('images/ucl.jpg') no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
 
-
-}
-
-
-</style>
-       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-      
+    }
+  </style>
 </head>
+
 <body>
 
-<form style="margin-left: 150px; margin-top: 100px; color: white;">
-  <div class="form-group">
-    <label for="exampleInputEmail1" style="width: 200px; font-size: 1.5em;">Username</label>
-    <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username" style="width: 200px">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1" style="width: 200px; font-size: 1.5em;">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="width: 200px">
-  </div>
-  <button type="submit" class="btn btn-primary" style="margin-top: 30px; font-size: 1.5em; width: 200px; background-color: navy; border-color: navy;">Login</button>
-</form>
+  <form style="margin-left: 150px; margin-top: 100px; color: white;">
+    <div class="form-group">
+      <label for="exampleInputEmail1" style="width: 200px; font-size: 1.5em;">Username</label>
+      <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username"
+        style="width: 200px">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1" style="width: 200px; font-size: 1.5em;">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
+        style="width: 200px">
+    </div>
+    <button type="submit" class="btn btn-primary"
+      style="margin-top: 30px; font-size: 1.5em; width: 200px; background-color: navy; border-color: navy;">Login</button>
+  </form>
+
+
+
+
 
 
 
 
 
 </body>
+
 </html>
