--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
           <form>
             <div class="form-group">
               <label for="InputEmail1">Username</label>
-              <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
-                placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <input type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter Username">
             </div>
             <div class="form-group">
               <label for="Password1">Password</label>
@@ -76,8 +75,8 @@
           <form>
             <div class="form-group">
               <label for="eInputEmail2">Username</label>
-              <input type="email" class="form-control" id="InputEmail2" aria-describedby="emailHelp"
-                placeholder="Enter Email">
+              <input type="text" class="form-control" id="InputEmail2" aria-describedby="emailHelp"
+                placeholder="Enter Username">
             </div>
             <div class="form-group">
               <label for="InputPassword2">Password</label>
