--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form action="/signup" method="post">
             <div class="form-group">
               <label for="eInputEmail2">Username</label>
               <input type="email" class="form-control" id="InputEmail2" aria-describedby="emailHelp"
