--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
             <div class="form-group">
               <label for="eInputEmail2">Username</label>
               <input type="text" class="form-control" id="InputEmail2" aria-describedby="emailHelp"
-                placeholder="Enter Username">
+                placeholder="Enter Username" name="username">
             </div>
             <div class="form-group">
               <label for="InputPassword2">Password</label>
-              <input type="password" class="form-control" id="InputPassword2" placeholder="Password">
+              <input type="password" class="form-control" id="InputPassword2" placeholder="Password" name="password">
             </div>
             <div class="form-group">
               <label for="InputPassword3">Confirm Password</label>
