--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 
         </form>
 
-        <form id="sign-out-form">
+        <form id="sign-out-form" action="/signOut" method="get">
             <button id="sign-out-button">Sign Out</button>
         </form>
 
