--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form action="/login" method="post">
             <div class="form-group">
-              <label for="InputEmail1">Username</label>
+              <label for="InputEmail1" >Username</label>
               <input type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
-                placeholder="Enter Username">
+                placeholder="Enter Username" name="username">
             </div>
             <div class="form-group">
-              <label for="Password1">Password</label>
-              <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+              <label for="Password1" >Password</label>
+              <input type="password" class="form-control" id="InputPassword1" placeholder="Password" name="password">
             </div>
             <button type="submit" class="btn btn-primary">Sign In</button>
           </form>
