--- a/home.html
+++ b/home.html
@@ -50,10 +50,10 @@
 
 
         <div class="col-md-12 col-md-offset-2 col-sm-12" id="game-column">
-            <div class="game-wrapper">
+            <div class="game-wrapper" id="game-div" style="display: none">
                 <div class="home-team">
 
-                    <img src="images/FC Barcelona.PNG" id="home-image"/>
+                    <img src="" id="home-image"/>
                     <br>
                     <span id="home-name">FC Barcelona</span>
 
@@ -66,7 +66,7 @@
 
                 <div class="away-team">
 
-                    <img src="images/Manchester United.PNG" id="away-image"/>
+                    <img src="" id="away-image"/>
                     <br>
                     <span class="team-name" id="away-name">Manchester United</span>
                 </div>
