some UI changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
  
+<script type="text/javascript" src="typed/src/typed.js"></script>
+<script type="text/javascript" src="typed/lib/typed.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
@@ -16,6 +18,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="./images/icon.ico">
+
   <title>UCL Blog</title>
 </head>
 
@@ -29,6 +33,11 @@
     </button>
   </header>
 
+  <span id="typed"></span>
+
+  <script type="text/javascript">
+  var typed = new Typed("#typed", {strings: ["Welcome to the Champions League Blog", "Let's discuss the games!!"], typeSpeed: 30, loop: false, backSpeed: 10});
+  </script>
 
   <!-- login -->
   <div class="modal fade" id="ModalLogin" tabindex="-1" role="dialog" aria-labelledby="ModalLoginLabel"
