--- a/home.html
+++ b/home.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <title>UCL Blog</title>
+    <link rel="shortcut icon" href="./images/icon.ico">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -102,7 +104,7 @@
                 <div class="panel-body">
                     <textarea class="form-control" placeholder="write a comment..." rows="2"
                         id="new-comment-text"></textarea>
-                    <button type="button" class="btn btn-info pull-right" id="post-button">Post</button>
+                    <button type="button" class="btn btn-info pull-right" id="post-button" style="display: none">Post</button>
                 </div>
             </div>
         </div>
