--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
 
         <div id="refresh-div">
 
-            <img src="images/refresh.png" id="refresh-img" />
+            <img src="images/refresh.png" id="refresh-img" style="display: none"/>
         </div>
 
 
@@ -103,7 +103,7 @@
 
                 <div class="panel-body">
                     <textarea class="form-control" placeholder="write a comment..." rows="2"
-                        id="new-comment-text"></textarea>
+                        id="new-comment-text" style="display: none"></textarea>
                     <button type="button" class="btn btn-info pull-right" id="post-button" style="display: none">Post</button>
                 </div>
             </div>
